--- a/book-swap-frontend/package.json
+++ b/book-swap-frontend/package.json
@@ -12,11 +12,14 @@
     "@types/node": "^12.6.4",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "@types/react-native": "^0.60.2",
+    "@types/react-native-navigation": "^2.0.0",
     "expo": "^33.0.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-navigation": "^3.0.0-alpha.4",
     "react-native-web": "^0.11.4",
     "typescript": "^3.5.3"
   },
