--- a/book-swap-frontend/package.json
+++ b/book-swap-frontend/package.json
@@ -19,8 +19,9 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-navigation": "^3.0.0-alpha.4",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
+    "react-navigation": "^3.11.1",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
